ck.university.diploma.csm

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,12 +10,13 @@ application.secret="Q]Z5;`X0=F3mAda1lW[r5jFg{w9stMiBnShjPU;59l7cwA9H}1abrprOgTP/
 
 # The application languages
 # ~~~~~
-application.langs="en,de,pl,fr,es,ja"
+application.langs="en,de,pl,fr,es,ja,uk"
 
 # Global object class
 # ~~~~~
 # Define the Global object class for this application.
 # Default to Global in the root package.
+
 application.global=ck.university.diploma.csm.Global
 
 # Router 
@@ -30,7 +31,7 @@ application.global=ck.university.diploma.csm.Global
 # By convention, the default datasource is named `default`
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://server:3306/indications?useUnicode=true"
+db.default.url="jdbc:mysql://localhost:3306/indications?useUnicode=true"
 db.default.user=indus
 db.default.password="indus"
 
