--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,7 +31,7 @@ application.global=ck.university.diploma.csm.Global
 # By convention, the default datasource is named `default`
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost:3306/indications?useUnicode=true"
+db.default.url="jdbc:mysql://server:3306/indications?useUnicode=true"
 db.default.user=indus
 db.default.password="indus"
 
